reports/ddd.err.log
Traceback (most recent call last):
  File "/Users/d/miniconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/d/miniconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
### Extra credit challenge (1.5 points max)

The following code introduces a random disturbance to the data in the screenshot above: `grade_34060071_general.dta`. 
Use the outputed [data file](https://raw.githubusercontent.com/jhustata/book/main/grade_34060071_general.txt) to reproduce the fancy plot of 2021/2022 grades

```stata

#delimit cr
quietly {
	
	if 1 {
		
		set seed 340600
		
		global filename grade_34060071_general
		global vars final y1m y1lb y1ub
			
	}
	
	if 2 {
		
		use ${filename}.dta, clear 		
		
	}
	
	if 3 {
		
        g disturbance=rnormal(0,3)	
		 
	}
	
	if 4 { 
		
		forvalues i=1/4 {
			
			local vars: di word("$vars",`i')
			replace `vars' = `vars' + disturbance 
			
		}
		
		
	}
	
	if 5 {
		
		drop disturbance 
		export delimited using "${filename}.txt", replace
		
	}
}

```
------------------

[0;36m  Cell [0;32mIn[1], line 36[0;36m[0m
[0;31m    local vars: di word("$vars",`i')[0m
[0m                                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unterminated string literal (detected at line 36)

SyntaxError: unterminated string literal (detected at line 36) (2069128630.py, line 36)

